; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm/mv/armada/extr_wdt.c_mv_wdt_disable_armada_38x.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm/mv/armada/extr_wdt.c_mv_wdt_disable_armada_38x.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CPU_TIMER_WD_EN = common dso_local global i32 0, align 4
@CPU_TIMER_WD_AUTO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @mv_wdt_disable_armada_38x to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mv_wdt_disable_armada_38x() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 (...) @mv_get_timer_control()
  store i32 %2, i32* %1, align 4
  %3 = load i32, i32* @CPU_TIMER_WD_EN, align 4
  %4 = load i32, i32* @CPU_TIMER_WD_AUTO, align 4
  %5 = or i32 %3, %4
  %6 = xor i32 %5, -1
  %7 = load i32, i32* %1, align 4
  %8 = and i32 %7, %6
  store i32 %8, i32* %1, align 4
  %9 = load i32, i32* %1, align 4
  %10 = call i32 @mv_set_timer_control(i32 %9)
  %11 = call i32 (...) @mv_wdt_disable_armada_38x_xp_helper()
  ret void
}

declare dso_local i32 @mv_get_timer_control(...) #1

declare dso_local i32 @mv_set_timer_control(i32) #1

declare dso_local i32 @mv_wdt_disable_armada_38x_xp_helper(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
